--- a/app/src/main/res/layout/activity_details_trip.xml
+++ b/app/src/main/res/layout/activity_details_trip.xml
@@ -426,7 +426,7 @@
         android:text="@string/adventure_index"
         android:textAlignment="center"
         android:textColor="#5d5a63"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
@@ -447,10 +447,10 @@
         android:id="@+id/textViewDisplayGlobalIndex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Global Index :"
+        android:text="@string/average_total_score"
         android:textAlignment="center"
         android:textColor="#5d5a63"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.888"
