--- a/app/src/main/res/layout/activity_details_trip.xml
+++ b/app/src/main/res/layout/activity_details_trip.xml
@@ -123,7 +123,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.426" />
+        app:layout_constraintVertical_bias="0.475" />
 
     <TextView
         android:id="@+id/textViewDisplayTT"
@@ -274,8 +274,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="80dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toEndOf="@+id/textViewDisplayTT"
         app:layout_constraintTop_toTopOf="@+id/textViewDisplayTT" />
 
     <TextView
@@ -463,6 +464,7 @@
         app:layout_constraintHorizontal_bias="0.771"
         app:layout_constraintStart_toEndOf="@+id/textViewAdventureIndex"
         app:layout_constraintTop_toBottomOf="@+id/textViewDisplayGlobalIndex" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
