--- a/app/src/main/res/layout/activity_save_trip_step2.xml
+++ b/app/src/main/res/layout/activity_save_trip_step2.xml
@@ -320,7 +320,7 @@
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
-            android:text="@string/cancel"
+            android:text="@string/quit"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/buttonPrev"
             app:layout_constraintTop_toBottomOf="@id/buttonSummary" />
