--- a/app/src/main/res/layout/activity_save_trip_step1.xml
+++ b/app/src/main/res/layout/activity_save_trip_step1.xml
@@ -152,7 +152,7 @@
             android:id="@+id/divider6"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="70dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -228,12 +228,12 @@
             android:id="@+id/divider3"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="208dp"
+            android:layout_marginTop="115dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/divider6" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout4"
