--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -115,7 +115,7 @@
     <EditText
         android:id="@+id/editTextUserName"
         android:layout_width="288dp"
-        android:layout_height="55dp"
+        android:layout_height="48dp"
         android:autofillHints="hint"
         android:background="@drawable/dark_lavander_background"
         android:hint="@string/your_username"
@@ -133,7 +133,7 @@
         android:id="@+id/TextViewPwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:text="@string/password"
         android:textColor="#5d5a63"
         android:textSize="18sp"
@@ -145,8 +145,8 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="290dp"
-        android:layout_height="55dp"
+        android:layout_width="288dp"
+        android:layout_height="48dp"
         android:autofillHints=""
         android:background="@drawable/dark_lavander_background"
         android:ems="10"
@@ -179,22 +179,25 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonPrevious"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.39" />
 
         <Button
             android:id="@+id/buttonSignUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="76dp"
+            android:layout_marginEnd="80dp"
             android:backgroundTint="@color/violet"
             android:text="@string/sign_in"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.513"
             app:layout_constraintStart_toEndOf="@+id/buttonPrevious"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.50" />
+            app:layout_constraintVertical_bias="0.39" />
 
         <Button
             android:id="@+id/buttonPrevious"
@@ -205,10 +208,10 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.50"
+            app:layout_constraintHorizontal_bias="0.499"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.7" />
+            app:layout_constraintVertical_bias="0.487" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
