--- a/app/src/main/res/layout/activity_details_trip.xml
+++ b/app/src/main/res/layout/activity_details_trip.xml
@@ -123,9 +123,24 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.297"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.475" />
+        app:layout_constraintVertical_bias="0.466" />
+
+    <Button
+        android:id="@+id/buttonShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/share"
+        android:backgroundTint="@color/violet"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.285"
+        app:layout_constraintStart_toEndOf="@+id/buttonPrevious"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.466" />
 
     <TextView
         android:id="@+id/textViewDisplayTT"
@@ -466,7 +481,6 @@
         app:layout_constraintHorizontal_bias="0.771"
         app:layout_constraintStart_toEndOf="@+id/textViewAdventureIndex"
         app:layout_constraintTop_toBottomOf="@+id/textViewDisplayGlobalIndex" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
